[gd_scene load_steps=8 format=3 uid="uid://c3y6lac64hkep"]

[ext_resource type="Script" path="res://start_screen.gd" id="1_e2qiy"]
[ext_resource type="Texture2D" uid="uid://berhw4t5hls8b" path="res://InitialMap.PNG" id="1_e3bmj"]
[ext_resource type="FontFile" uid="uid://ct5pmfxk4binc" path="res://stormfaze/Stormfaze.otf" id="2_kh8o8"]
[ext_resource type="Theme" uid="uid://br13ib4sc4ok8" path="res://default_theme.tres" id="3_7t82g"]
[ext_resource type="PackedScene" uid="uid://q6s72nglhqag" path="res://level_transition.tscn" id="5_r51ln"]
[ext_resource type="AudioStream" uid="uid://dgpstp7u0rbih" path="res://button-202966.mp3" id="6_qpjsj"]

[sub_resource type="LabelSettings" id="LabelSettings_nfrpu"]
font_size = 35
shadow_size = 22
shadow_color = Color(0, 0, 0, 1)

[node name="StartScreen" type="CanvasLayer"]
script = ExtResource("1_e2qiy")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
texture = ExtResource("1_e3bmj")
expand_mode = 1

[node name="ColorRect" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = -1.0
offset_top = 447.0
offset_right = 123.0
offset_bottom = 464.0
mouse_filter = 1
color = Color(0, 0.584314, 0.913725, 1)

[node name="ColorRect2" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 126.0
offset_top = 440.0
offset_right = 152.0
offset_bottom = 497.0
mouse_filter = 1
color = Color(0.894118, 0.65098, 0.447059, 1)

[node name="ColorRect3" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 192.0
offset_top = 449.0
offset_right = 252.0
offset_bottom = 465.0
mouse_filter = 1
color = Color(0.894118, 0.65098, 0.447059, 1)

[node name="ColorRect4" type="ColorRect" parent="TextureRect"]
layout_mode = 0
offset_left = 273.0
offset_top = 454.0
offset_right = 583.0
offset_bottom = 464.0
mouse_filter = 1
color = Color(0.243137, 0.537255, 0.282353, 1)

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = -1
anchor_left = 0.291
anchor_top = 0.002
anchor_right = 0.707
anchor_bottom = 1.0
offset_left = -0.231995
offset_top = -0.296
offset_right = -0.463989
grow_horizontal = 2
mouse_filter = 2
color = Color(0, 0.584314, 0.913725, 0.760784)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2
mouse_filter = 2
alignment = 1

[node name="GameTitle" type="Label" parent="HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_kh8o8")
theme_override_font_sizes/font_size = 35
text = "Fishing For Life"
label_settings = SubResource("LabelSettings_nfrpu")

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2
mouse_filter = 2

[node name="StartButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("3_7t82g")
theme_override_font_sizes/font_size = 20
text = "Start"

[node name="MarginContainer2" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 2

[node name="ControlsButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("3_7t82g")
theme_override_font_sizes/font_size = 20
text = "Controls"

[node name="MarginContainer3" type="MarginContainer" parent="HBoxContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 10)
layout_mode = 2
mouse_filter = 2

[node name="QuitButton" type="Button" parent="HBoxContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 35)
layout_mode = 2
theme = ExtResource("3_7t82g")
theme_override_font_sizes/font_size = 20
text = "Quit"

[node name="LevelTransition" parent="." instance=ExtResource("5_r51ln")]

[node name="AudioNode" type="Node2D" parent="."]

[node name="ButtonClick" type="AudioStreamPlayer2D" parent="AudioNode"]
stream = ExtResource("6_qpjsj")

[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartButton" to="." method="_on_start_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ControlsButton" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
